Fix overflow on mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,7 +8,6 @@
   color-scheme: light dark;
   color: var(--font-color);
   background-color: var(--background-color);
-  overflow-x: hidden;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
