--- a/frontend/src/mobile.css
+++ b/frontend/src/mobile.css
@@ -8,6 +8,7 @@
         top: 0;
         position: sticky;
         z-index: 1;
+        overflow-x: hidden;
     }
 
     .search-bar-container {
